--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <canvas id="qrcode"></canvas>
     </div>
  <!-- 🔵 NUOVA SEZIONE: AGGIUNGI AI CONTATTI -->
-    <a class="btn" href="https://metronotteivp.github.io/giovannicaponecontatti/" download>Aggiungi ai contatti</a>
+    <a class="btn" href="https://metronotteivp.github.io/giovannicaponecontatti/capone.vcf" download>Aggiungi ai contatti</a>
 
     <footer>© 2025 Metronotte I.V.P. S.R.L.</footer>
   </main>
@@ -144,7 +144,7 @@
   <script>
     const qr = new QRious({
       element: document.getElementById('qrcode'),
-      value:'https://metronotteivp.github.io/ugocastaldo/',
+      value:'https://metronotteivp.github.io/giovannicapone/',
       size: 120,
       background: 'transparent',
       foreground: '#1f6feb'
@@ -162,6 +162,7 @@
   </script>
 </body>
 </html>
+
 
 
 
