--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="avatar">
       <img src="capone.jpg" alt="Comandante Giovanni Capone">
     </div>
-    <h1 class="name">Comandante Giovanni Capone</h1>
+    <h1 class="name">Comandante <br> Giovanni Capone</h1>
     <div class="title">Comandante — Metronotte Ivp s.r.l.</div>
 
     <!-- DESCRIZIONE -->
@@ -162,6 +162,7 @@
   </script>
 </body>
 </html>
+
 
 
 
