--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <div class="avatar">
       <img src="capone.jpg" alt="Comandante Giovanni Capone">
     </div>
-    <h1 class="name">Comandante <br> Giovanni Capone</h1>
-    <div class="title">Comandante — Metronotte Ivp s.r.l.</div>
+    <h1 class="name">Maresciallo Capo <br> Giovanni Capone</h1>
+    <div class="title">Maresciallo Capo — Metronotte Ivp s.r.l.</div>
 
     <!-- DESCRIZIONE -->
     <p class="about">Istituto di vigilanza privata leader nel settore, opera su Avellino, Milano, Napoli, Monza, Brianza, Pavia, Salerno, Caserta e Benevento. Sicurezza e affidabilità per aziende e privati.</p>
@@ -162,6 +162,7 @@
   </script>
 </body>
 </html>
+
 
 
 
